[package]
name = "anomaly_detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cms = { git = "https://github.com/m-m-adams/midas-rs", version = "1.0.0" }
easy-error = "1.0.0"
etherparse = "0.13.0"
nom = "7.1.3"
pcap = "1.1.0"
pktparse = "0.7.1"
sawp = "0.12.1"
sawp-modbus = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"

